Change Font on CommuniHelp page; Fix horizontal scroll; Remove title on mobile

--- a/src/pages/Projects/CommuniHelp/index.styl
+++ b/src/pages/Projects/CommuniHelp/index.styl
@@ -1,3 +1,6 @@
+.app
+  overflow hidden
+
 .communihelp-page
   overflow hidden
   background-color #C2B1EA
